# cmake-pybind-example

src/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h  pybind.cpp
